# gtkwave

./: README.md
python/: .gitignore  GI_STATUS.md  Makefile  README.md  build.sh  meson.build  read_signal.c  read_signal.py  read_signal_ctypes.py  read_signal_wrapper.sh  run.sh  run_gi.sh
python/tests/: README.md  basic.fst  basic.vcd  run_tb.sh  tb.v
